--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-typescript-tailwind-starter",
+  "name": "all-nigerian-footballers",
   "version": "1.0.0",
-  "description": "The default stater gatsby starter with typescript, tailwind css & latest package",
+  "description": "An open source project for infos on the past and present players of the super eagles",
   "author": "Danang Eko Alfianto <github.com/danangekal>",
   "license": "MIT",
   "keywords": [
@@ -31,18 +31,18 @@
     "postpublish": "pinst --enable"
   },
   "dependencies": {
-    "gatsby": "^3.1.2",
-    "gatsby-plugin-gatsby-cloud": "^2.1.0",
-    "gatsby-plugin-image": "^1.1.2",
-    "gatsby-plugin-manifest": "^3.1.0",
-    "gatsby-plugin-offline": "^4.1.0",
-    "gatsby-plugin-react-helmet": "^4.1.0",
-    "gatsby-plugin-sharp": "^3.1.2",
-    "gatsby-source-filesystem": "^3.1.0",
-    "gatsby-transformer-sharp": "^3.1.0",
+    "gatsby": "^4.6.1",
+    "gatsby-plugin-gatsby-cloud": "^4.6.0",
+    "gatsby-plugin-image": "^2.6.0",
+    "gatsby-plugin-manifest": "^4.6.0",
+    "gatsby-plugin-offline": "^5.6.0",
+    "gatsby-plugin-react-helmet": "^5.6.0",
+    "gatsby-plugin-sharp": "^4.6.0",
+    "gatsby-source-filesystem": "^4.6.0",
+    "gatsby-transformer-sharp": "^4.6.0",
     "prop-types": "^15.7.2",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0"
   },
   "devDependencies": {
@@ -60,13 +60,13 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gatsby-plugin-postcss": "^4.1.0",
+    "gatsby-plugin-postcss": "^4.14.0",
     "husky": "^5.2.0",
     "lint-staged": "^10.5.4",
     "pinst": "^2.1.6",
     "postcss": "^8.2.8",
     "prettier": "^2.2.1",
-    "tailwindcss": "^2.0.4",
+    "tailwindcss": "^3.0.4",
     "typescript": "^4.2.3"
   },
   "engines": {
