--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "all-nigerian-footballers",
   "version": "1.0.0",
-  "description": "An open source project for infos on the past and present players of the super eagles",
+  "description": "An open source project for infos on the past and present players of the super eagles.",
   "author": "Danang Eko Alfianto <github.com/danangekal>",
   "license": "MIT",
   "keywords": [
@@ -60,7 +60,7 @@
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.23.1",
     "eslint-plugin-react-hooks": "^4.2.0",
-    "gatsby-plugin-postcss": "^4.14.0",
+    "gatsby-plugin-postcss": "^5.6.0",
     "husky": "^5.2.0",
     "lint-staged": "^10.5.4",
     "pinst": "^2.1.6",
